[ADD] Merging repos

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,8 @@
 
+<footer>
+    all the paths: 
+    <a href="/dashboard/" class="btn btn-primary btn-lg">dashboard</a>
+    <a href="/login/" class="btn btn-primary btn-lg">login</a>
+    <a href="/videos/" class="btn btn-primary btn-lg">videos</a>
+    <a href="/add/" class="btn btn-primary btn-lg">add</a>
+</footer>
