[ADD] style for login form

--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -3,6 +3,6 @@
   <div class="banner-content">    
     <h1>Lekker Kijken</h1>
     <p>Netflix, alleen dan anders!</p>
-    <a href="/videos/" class="btn btn-primary btn-lg">Videos</a>
+    <a [routerLink]="['videos']" class="btn btn-danger">Videos</a>
   </div>
 </div>
