--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,25 +1,31 @@
-<nav class="navbar navbar-expand navbar-dark bg-dark static-top">
-  <a class="navbar-brand" href="#"><img src="assets/images/logo2.png" width="200">
-      </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
+<nav class="navbar navbar-expand navbar-dark bg-dark static-top">    
+    <a class="navbar-brand" href="#"><img src="assets/images/logo2.png" width="200">
+    </a>
+    <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button> -->
+    
+    <!-- navbar links -->
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <!-- <li class="nav-item active">
+          <a class="nav-link" href="#">home<span class="sr-only">(current)</span></a>
+        </li> -->
+        <li class="nav-item">
+            <a [routerLink]="['videos']" class="nav-link">videos</a>
+        </li>
+        <li class="nav-item">
+            <a [routerLink]="['add']" class="nav-link">add</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item">
-        <a class="nav-link" href="#">Browse Categories</a>
+          <a [routerLink]="['login-form']" class="nav-link">login</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Favorites</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-  </div>
-</nav>
+      </ul>
+    </div>
+  </nav>
