--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,8 +1,9 @@
-
-<footer>
-    all the paths: 
-    <a href="/dashboard/" class="btn btn-primary btn-lg">dashboard</a>
-    <a href="/login/" class="btn btn-primary btn-lg">login</a>
-    <a href="/videos/" class="btn btn-primary btn-lg">videos</a>
-    <a href="/add/" class="btn btn-primary btn-lg">add</a>
-</footer>
+<!-- <nav class="navbar navbar-dark bg-dark mt-5 fixed-bottom"> -->
+<nav class="navbar navbar-expand navbar-dark bg-dark static-bottom">
+     <div class="navbar-expand m-auto navbar-text">
+         <a href="/dashboard/" class="btn btn-danger btn-lg">dashboard</a>
+         <a href="/login/" class="btn btn-danger btn-lg">login</a>
+         <a href="/videos/" class="btn btn-danger btn-lg">videos</a>
+         <a href="/add/" class="btn btn-danger btn-lg">add</a>
+     </div>
+ </nav>
