added video thumbnails and links to video-detail-pages

--- a/src/app/components/youtube/youtube.component.html
+++ b/src/app/components/youtube/youtube.component.html
@@ -14,4 +14,14 @@
             {{movie.title}}
         </div>
     </div>
+
+    <div class="row">
+        <!-- video iframe card iteration -->
+        <div class="col-xs-12 col-sm-3" *ngFor="let movie of movies">
+            <a [routerLink]="['/detail', movie.id]">
+            <img [src]="getYouTubeImg(movie.youTubeId) | safepipe" width="200">
+            {{movie.title}}
+        </a>
+        </div>
+    </div>
 </div>
