--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,9 +1,10 @@
 <!-- <nav class="navbar navbar-dark bg-dark mt-5 fixed-bottom"> -->
 <nav class="navbar navbar-expand navbar-dark bg-dark static-bottom">
      <div class="navbar-expand m-auto navbar-text">
-         <a href="/dashboard/" class="btn btn-danger btn-lg">dashboard</a>
-         <a href="/login/" class="btn btn-danger btn-lg">login</a>
-         <a href="/videos/" class="btn btn-danger btn-lg">videos</a>
-         <a href="/add/" class="btn btn-danger btn-lg">add</a>
+         <!-- <a [routerLink]="['add']" class="btn btn-danger">add</a>
+         <a [routerLink]="['login']" class="btn btn-danger">login</a>
+         <a [routerLink]="['videos']" class="btn btn-danger">videos</a>
+         <a [routerLink]="['dashboard']" class="btn btn-danger">dashboard</a> -->
+        <a href="https://github.com/sophievillerius/LekkerKijken" class="nav-link"><i class="fab fa-github"></i></a>
      </div>
  </nav>
