[ADD] setup styling details

--- a/src/app/components/add-form/add-form.component.html
+++ b/src/app/components/add-form/add-form.component.html
@@ -16,3 +16,4 @@
     <button (click)="submit(title, youTubeId, description)" class="btn btn-danger">Submit</button>
   </form>
 </div>
+<!-- </form> -->
