added delete function

--- a/src/app/components/add-form/add-form.component.html
+++ b/src/app/components/add-form/add-form.component.html
@@ -13,7 +13,7 @@
       <label for="description">Description</label>
       <input type="text" class="form-control" [(ngModel)]="description" name="description">
     </div>
-    <button (click)="submit(title, youTubeId, description)" class="btn btn-danger">Submit</button>
+    <button (click)="submit(title, youTubeId, description)" class="btn btn-danger form-group">Submit</button>
   </form>
 </div>
 <!-- </form> -->
