--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,6 +10,9 @@
         <li class="nav-item">
             <a [routerLink]="['add']" class="nav-link">add</a>
         </li>
+        <li class="nav-item">
+            <a [routerLink]="['manage']" class="nav-link">manage</a>
+        </li>
       </ul>
       <!-- login button -->
       <a [routerLink]="['login']" class="btn btn-danger">login</a>
