--- a/src/app/components/video-detail/video-detail.component.scss
+++ b/src/app/components/video-detail/video-detail.component.scss
@@ -237,22 +237,23 @@ a {
     overflow: hidden;
 }
 
-.channel-title {
-    flex: 1 1 auto;
-    margin: 0 2rem;
-}
+// .channel-title {
+//     flex: 1 1 auto;
+//     margin: 0 2rem;
+// }
 
-.channel-title h1 {
-    font-size: 2.4rem;
-    font-weight: 400;
-    color: var(--black-text);
-    white-space: nowrap;
-}
+// .channel-title h1 {
+//     font-size: 16px;
+//     font-size: 2.4rem;
+//     font-weight: 400;
+//     color: var(--black-text);
+//     white-space: nowrap;
+// }
 
-.channel-title i {
-    font-size: 1.4rem;
-    color: #6e6e6e;
-}
+// .channel-title i {
+//     font-size: 1.4rem;
+//     color: #6e6e6e;
+// }
 
 .channel-subscriber-count {
     font-size: 1.4rem;
