--- a/src/app/components/youtube/youtube.component.html
+++ b/src/app/components/youtube/youtube.component.html
@@ -36,8 +36,11 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-4 metadata">
+                                <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i> 
-                                <p>{{movie.rating}}</p>
+                                <i class="fa fa-star"></i> 
+                                <i class="fa fa-star"></i> 
+                                <!-- <p>{{movie.rating}}</p> -->
                             </div>
                             <div class="col-8 metadata">Genre</div>
                         </div>
