--- a/src/app/components/youtube/youtube.component.scss
+++ b/src/app/components/youtube/youtube.component.scss
@@ -5,7 +5,6 @@
 body {
    background-color: #F8FAFB;
    font-family: 'Open Sans', sans-serif;
-   //padding-top: 10%;
 }
 
 .col-md-5, .description {
@@ -41,25 +40,24 @@ body {
 }
 
 .card-img {
-   -webkit-clip-path: inset(10% 0 20% 0);
-    clip-path: inset(10% 0 20% 0);
-    margin-top: -15%;
+   -webkit-clip-path: inset(0 0 0 0);
+    clip-path: inset(0 0 0 0);
+    margin-top: 0%;
 }
 
 .card-body {
    position: relative;
-   margin-top: -27%;
-   padding-top: 30px;
    color: #9FA7A9;
    .card-title {
-       // margin-top: 5px;
-      font-weight: 300;
-      color: #414345;
+       font-size: 24px;
+       margin-top: -20px;
+       padding-top: 5px;
+       font-weight: 300;
+       color: #414345;
    }
    .card-text {
       margin-top: 8px;
-      font-weight: 600;
-      line-height: 30px;
+      font-weight: 300;
    }
 }
 
@@ -81,7 +79,7 @@ body {
 .trailer-preview {
    background-color: #ff3d49;
    position: absolute;
-   top: 0px;
+   top: -40px;
    right: 24px;
    width: 80px;
    height: 80px;
