--- a/src/app/components/youtube/youtube.component.html
+++ b/src/app/components/youtube/youtube.component.html
@@ -45,7 +45,7 @@
                             <div class="col-8 metadata">Genre</div>
                         </div>
                     </div>      
-                    <p class="card-text">{{movie.description}}</p>
+                    <!-- <p class="card-text">{{movie.description}}</p> -->
                     <a class="trailer-preview" [routerLink]="['/detail', movie.id]">
                         <i class="fa fa-play"></i>
                     </a>
