--- a/src/app/components/youtube/youtube.component.html
+++ b/src/app/components/youtube/youtube.component.html
@@ -24,10 +24,11 @@
             </div>
         </div>
     </div> -->
+    
 
     <div class="row flex-column-reverse flex-md-row">
         <div class="col-md-4" *ngFor="let movie of movies">
-            <div class="card">   
+            <div class="card">   <!-- movie thumbnail component met id als input-->
                 <div class="card-header">
                     <img class="card-img" [src]="getYouTubeImg(movie.youTubeId) | safepipe" alt="Card image">
                 </div>  
@@ -36,11 +37,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-4 metadata">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i> 
-                                <i class="fa fa-star"></i> 
-                                <i class="fa fa-star"></i> 
-                                <!-- <p>{{movie.rating}}</p> -->
+                                <i *ngFor="let x of getStarArray(movie.rating)" class="fa fa-star"></i>
                             </div>
                             <div class="col-8 metadata">Genre</div>
                         </div>
