made some changes in edit and manage component

--- a/src/app/components/manage/manage.component.html
+++ b/src/app/components/manage/manage.component.html
@@ -17,6 +17,7 @@
                 <td>
 
                     <!-- <button (click)="editMovie(movie.id)" class="btn btn-danger form-group">Edit</button> -->
+                    <!-- TODO: make this into a modal -->
                     <form>
                         
                             <div class="form-group">
