--- a/src/app/components/video-detail/video-detail.component.html
+++ b/src/app/components/video-detail/video-detail.component.html
@@ -14,10 +14,14 @@
 	<div class="container">
 		<div class="channel-title">
 			<h2><span *ngIf = "movie.title">{{movie.title}}</span></h2>
-			<div class="channel-subscriber-count">{{movie.description}}</div>
-			<h6>Title: {{movie.title}}</h6>
-			<div class="channel-subscriber-count">Description: {{movie.description}}</div>
+			<div class="channel-subscriber-count">{{movie.description}}<br>
+				Rate movie:
+				<form>
+					  <input type = "text" [(ngModel)]="rating" name="rating">
+					  <button (click)="rateMovie(rating)">Submit</button>
+					</form></div>
 		</div>
+		
 		<div class="channel-subscribe">
             <!-- <button class="subscribe-btn btn">watch</button> -->
 		</div>
@@ -25,23 +29,8 @@
 </section>
 <!-- End of channel info section -->
 
+
+
+
 <!-- Other videos -->
-Rate movie:
-<form>
-        <input type = "text" [(ngModel)]="rating" name="rating">
-        <button (click)="rateMovie(rating)">Submit</button>
-      </form>
-
-<div class="embed-responsive embed-responsive-16by9">
-    <iframe width="100%" 
-    [src]="getVideoUrl(movie.youTubeId) | safepipe"
-    frameborder="0" 
-    allow="autoplay; encrypted-media" 
-    allowfullscreen>
-</iframe>
-</div>
-<!-- <nav>
-    <button (click)="goBack()">go back</button>
-</nav> -->
-
 <app-video-detail-list></app-video-detail-list>
