--- a/src/app/components/youtube/youtube.component.html
+++ b/src/app/components/youtube/youtube.component.html
@@ -1,27 +1,47 @@
 <div class="container">
-<div class="row flex-column-reverse flex-md-row">
-        <div class="col-md-4">
-            <div class="card">   
-                <div class="card-header">
-                    <img class="card-img" src="https://image.tmdb.org/t/p/w500/nBNZadXqJSdt05SHLqgT0HuC5Gm.jpg" alt="Card image">
-                </div>  
-                <div class="card-body">
-                    <h1 class="card-title">Interstellar</h1>
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-4 metadata">
-                                <i class="fa fa-star" aria-hidden="true"></i> 
-                                <p>9.5/10</p>
-                            </div>
-                            <div class="col-8 metadata">Adventure. Sci-Fi</div>
+    <div class="row">
+    
+    <div class="col-md-4" *ngFor="let movie of movies">
+        <div class="card">   
+            <div class="card-header">
+                <img class="card-img" [src]="getYouTubeImg(movie.youTubeId) | safepipe" alt="Card image">
+            </div>  
+            <div class="card-body">
+                <h1 class="card-title">{{movie.title}}</h1>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-4 metadata">
+                            <i *ngFor="let star of getStarArray(movie.rating)" class="fa fa-star"></i>
+                            <!-- <p>{{movie.rating}}</p> -->
                         </div>
-                    </div>      
-                    <p class="card-text">A team of explorers travel through wormhole in space in an attempt to ensure humanity's survival.</p>
-                    <a class="trailer-preview" href="https://youtu.be/ePbKGoIGAXY" target="new">
-                        <i class="fa fa-play" aria-hidden="true"></i>
-                    </a>
-                </div>
+                        <div class="col-8 metadata">Genre</div>
+                    </div>
+                </div>      
+                <!-- <p class="card-text">{{movie.description}}</p> -->
+                <a class="trailer-preview" [routerLink]="['/detail', movie.id]">
+                    <i class="fa fa-play"></i>
+                </a>
             </div>
         </div>
     </div>
+    </div>
 </div>
+
+
+
+
+
+<!-- <div class="row flex-column-reverse flex-md-row">
+    <div class="col-md-4" *ngFor="let movie of movies">
+        <div class="card">    movie thumbnail component met id als input-->
+            <!-- <div class="card-header">
+                <img class="card-img" [src]="getYouTubeImg(movie.youTubeId) | safepipe" alt="Card image">
+            </div>      -->
+            <!-- <p class="card-text">{{movie.description}}</p> -->
+            <!-- <a class="trailer-preview" [routerLink]="['/detail', movie.id]">
+                <i *ngFor="let star of getStarArray(movie.rating)" class="fa fa-play"></i>
+            </a>
+        </div>
+    </div>
+</div> --> 
+
