added the redux pattern according to the instructions in the course for add and remove

--- a/src/app/components/youtube/youtube.component.html
+++ b/src/app/components/youtube/youtube.component.html
@@ -1,7 +1,12 @@
 <div class="container">
     <div class="row">
+        <!-- <div *ngFor="let movie of movies">
+
+            <app-video-detail movie="movie"></app-video-detail>
+        </div> -->
     
-    <div class="col-md-4" *ngFor="let movie of movies">
+    <div class="col-md-4" *ngFor="let movie of movies | async">
+       
         <div class="card">   
             <div class="card-header">
                 <img class="card-img" [src]="getYouTubeImg(movie.youTubeId) | safepipe" alt="Card image">
@@ -12,13 +17,12 @@
                     <div class="row">
                         <div class="col-4 metadata">
                             <i *ngFor="let star of getStarArray(movie.rating)" class="fa fa-star"></i>
-                            <!-- <p>{{movie.rating}}</p> -->
                         </div>
                         <div class="col-8 metadata">Genre</div>
                     </div>
-                </div>      
-                <!-- <p class="card-text">{{movie.description}}</p> -->
-                <a class="trailer-preview" [routerLink]="['/detail', movie.id]">
+                </div>     
+                <p class="card-text">{{movie.description}}</p>
+                 <a class="trailer-preview" routerLink="/detail/{{movie.id}}">
                     <i class="fa fa-play"></i>
                 </a>
             </div>
