--- a/src/app/components/manage/manage.component.html
+++ b/src/app/components/manage/manage.component.html
@@ -9,7 +9,7 @@
             <th scope="col">Manage</th>
         </tr></thead>
         <tbody>
-            <tr *ngFor = "let movie of movies">
+            <tr *ngFor = "let movie of movies | async">
                 <th scope="row">{{movie.id}}</th>
                 <td><a [routerLink]="['/detail', movie.id]">{{movie.title}}</a></td>
                 <td>{{movie.description}}</td>
