made a beginning with unit testing and refactored video-detail-page

--- a/src/app/components/edit-modal/edit-modal.component.html
+++ b/src/app/components/edit-modal/edit-modal.component.html
@@ -13,7 +13,7 @@
             
             <div class="modal-body">
                 
-                <form>
+                <form #movieForm2="ngForm">
                     
                     <div class="form-group">
                         <label for="inputEditTitle" class="control-label">Title</label>
