--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,16 +5,16 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav mr-auto mt-2">
         <li class="nav-item">
-            <a [routerLink]="['videos']" class="nav-link">videos</a>
+            <a routerLink="videos" class="nav-link">videos</a>
         </li>
         <li class="nav-item">
-            <a [routerLink]="['add']" class="nav-link">add</a>
+            <a routerLink="add" class="nav-link">add</a>
         </li>
         <li class="nav-item">
-            <a [routerLink]="['manage']" class="nav-link">manage</a>
+            <a routerLink="manage" class="nav-link">manage</a>
         </li>
       </ul>
       <!-- login button -->
-      <a [routerLink]="['login']" class="btn btn-danger">login</a>
+      <a routerLink="login" class="btn btn-danger">login</a>
     </div>
   </nav>
