--- a/src/app/components/manage/manage.component.html
+++ b/src/app/components/manage/manage.component.html
@@ -11,14 +11,14 @@
         <tbody>
             <tr *ngFor = "let movie of movies | async">
                 <th scope="row">{{movie.id}}</th>
-                <td><a [routerLink]="['/detail', movie.id]">{{movie.title}}</a></td>
+                <td><a routerLink="detail/{{movie.id}}">{{movie.title}}</a></td>
                 <td>{{movie.description}}</td>
                 <td>{{movie.youTubeId}}</td>
                 <td>
 
                     <!-- <button (click)="editMovie(movie.id)" class="btn btn-danger form-group">Edit</button> -->
                     <!-- TODO: make this into a modal -->
-                    <form>
+                    <form #editMovieForm="ngForm">
                         
                             <div class="form-group">
                                 <label for="inputEditTitle" class="control-label">Title</label>
