--- a/src/app/components/youtube/youtube.component.html
+++ b/src/app/components/youtube/youtube.component.html
@@ -4,30 +4,33 @@
 
             <app-video-detail movie="movie"></app-video-detail>
         </div> -->
-    
-    <div class="col-md-4" *ngFor="let movie of movies | async">
-       
-        <div class="card">   
-            <div class="card-header">
-                <img class="card-img" [src]="getYouTubeImg(movie.youTubeId) | safepipe" alt="Card image">
-            </div>  
-            <div class="card-body">
-                <h1 class="card-title">{{movie.title}}</h1>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-4 metadata">
-                            <i *ngFor="let star of getStarArray(movie.rating)" class="fa fa-star"></i>
+
+        <div class="error" *ngIf="loadError$ | async">
+            Het gaat helemaal fout!
+        </div>
+
+        <div class="col-md-4" *ngFor="let movie of movies | async">
+            <div class="card">
+                <div class="card-header">
+                    <img class="card-img" [src]="getYouTubeImg(movie.youTubeId) | safepipe" alt="Card image">
+                </div>
+                <div class="card-body">
+                    <h1 class="card-title">{{movie.title}}</h1>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-4 metadata">
+                                <i *ngFor="let star of getStarArray(movie.rating)" class="fa fa-star"></i>
+                            </div>
+                            <div class="col-8 metadata">Genre</div>
                         </div>
-                        <div class="col-8 metadata">Genre</div>
                     </div>
-                </div>     
-                <p class="card-text">{{movie.description}}</p>
-                 <a class="trailer-preview" routerLink="/detail/{{movie.id}}">
-                    <i class="fa fa-play"></i>
-                </a>
+                    <p class="card-text">{{movie.description}}</p>
+                    <a class="trailer-preview" routerLink="/detail/{{movie.id}}">
+                        <i class="fa fa-play"></i>
+                    </a>
+                </div>
             </div>
         </div>
-    </div>
     </div>
 </div>
 
@@ -38,14 +41,13 @@
 <!-- <div class="row flex-column-reverse flex-md-row">
     <div class="col-md-4" *ngFor="let movie of movies">
         <div class="card">    movie thumbnail component met id als input-->
-            <!-- <div class="card-header">
+<!-- <div class="card-header">
                 <img class="card-img" [src]="getYouTubeImg(movie.youTubeId) | safepipe" alt="Card image">
             </div>      -->
-            <!-- <p class="card-text">{{movie.description}}</p> -->
-            <!-- <a class="trailer-preview" [routerLink]="['/detail', movie.id]">
+<!-- <p class="card-text">{{movie.description}}</p> -->
+<!-- <a class="trailer-preview" [routerLink]="['/detail', movie.id]">
                 <i *ngFor="let star of getStarArray(movie.rating)" class="fa fa-play"></i>
             </a>
         </div>
     </div>
-</div> --> 
-
+</div> -->
