--- a/src/app/components/add-form/add-form.component.html
+++ b/src/app/components/add-form/add-form.component.html
@@ -1,19 +1,21 @@
-<form #addMovieForm="ngForm">
 <div class="container-form">
-  <form>
+  <form [formGroup]="newMovieForm" (ngSubmit)="submit()">
+
     <div class="form-group">
       <label for="title">Title</label>
-      <input type="text" class="form-control" [(ngModel)]="title" name="title" required>
+      <input name="title" formControlName="title" class="form-control"/>
     </div>
+
     <div class="form-group">
-      <label for="youTubeId">YouTube Id</label>
-      <input type="text" class="form-control" [(ngModel)]="youTubeId" name="youTubeId" required>
+      <label for="youTubeId">youTubeId</label>
+      <input name="youTubeId" formControlName="youTubeId" class="form-control"/>
     </div>
+
     <div class="form-group">
       <label for="description">Description</label>
-      <input type="text" class="form-control" [(ngModel)]="description" name="description">
+      <input name="description" formControlName="description" class="form-control" />
     </div>
-    <button type="button" (click)="submit(title, youTubeId, description)" class="btn btn-danger form-group">Submit</button>
+
+    <button type="submit()">Save</button>
   </form>
 </div>
-</form>
