--- a/src/app/components/youtube/youtube.component.html
+++ b/src/app/components/youtube/youtube.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="error" *ngIf="loadError$ | async">
-            Het gaat helemaal fout!
+            Films could not be loaded at this time. We don't know why..
         </div>
     
     <div class="col-md-4" *ngFor="let movie of movies | async">
