--- a/src/app/components/login-form/login-form.component.html
+++ b/src/app/components/login-form/login-form.component.html
@@ -1,12 +1,12 @@
 <div class="container-form">
-  <form>
+  <form [formGroup]="loginForm" (ngSubmit)="login()">
     <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+      <label for="username">Username</label>
+      <input type="text" class="form-control" name="username" formControlName="username">
     </div>
     <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+      <label for="password">Password</label>
+      <input type="password" class="form-control" formControlName="password">
     </div>
     <button type="submit" class="btn btn-danger">Login</button>
   </form>
