--- a/src/app/components/manage/manage.component.html
+++ b/src/app/components/manage/manage.component.html
@@ -18,79 +18,9 @@
                 <td>{{movie.rating}}</td>
                 <td>
 
-                    <!-- <button (click)="editMovie(movie.id)" class="btn btn-danger form-group">Edit</button> -->
-                    <!-- TODO: make this into a modal -->
-                    <form #editMovieForm="ngForm">
-                        
-                            <div class="form-group">
-                                <label for="inputEditTitle" class="control-label">Title</label>
-                                <input type="text" class="form-control" [(ngModel)]="movie.title" name="title" id="inputEditTitle" required>
-                            </div>
-                            
-                            <div class="form-group">
-                                <label for="inputEditDescription" class="control-label">Description</label>
-                                <input type="text" class="form-control" [(ngModel)]="movie.description" name="description" id="inputEditDescription" value="{{movie.description}}" required>
-                            </div>
-                            
-                            <div class="form-group">
-                                <label for="inputEditYouTubeId" class="control-label">YouTubeId</label>
-                                <input type="text" class="form-control" [(ngModel)]="movie.youTubeId" name= "youTubeId" id="inputEditYouTubeId" value="{{movie.youTubeId}}" required>
-                            </div>
-                            
-                            <div class="form-group">
-                                <button (click)="changeMovie(movie.title, movie.youTubeId, movie.description, movie.id)" class="btn btn-primary">Submit</button>
-                                <button id="closeButton2" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            </div>
-                            
-                        </form>
+                        <a routerLink="/edit/{{movie.id}}">Edit</a>
                     <button (click)="deleteMovie(movie.id)" class="btn btn-danger form-group">Delete</button>
                 </td>
             </tr>
         </tbody>
     </table>
-    
-    <!-- Edit Movie Modal -->
-    <!-- <div id="editMovieModal" class="modal fade" role="dialog" *ngFor="let movie of movies">
-        <div class="modal-dialog"> -->
-            
-            <!-- Content-->
-            <!-- <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    
-                    <h2>Edit Movie</h2>
-                    
-                </div>
-                
-                <div class="modal-body">
-                    
-                    <form>
-                        
-                        <div class="form-group">
-                            <label for="inputEditTitle" class="control-label">Title</label>
-                            <input type="text" class="form-control" [(ngModel)]="movie.title" name="title" id="inputEditTitle" required>
-                        </div>
-                        
-                        <div class="form-group">
-                            <label for="inputEditDescription" class="control-label">Description</label>
-                            <input type="text" class="form-control" [(ngModel)]="movie.description" name="description" id="inputEditDescription" value="{{movie.description}}" required>
-                        </div>
-                        
-                        <div class="form-group">
-                            <label for="inputEditYouTubeId" class="control-label">YouTubeId</label>
-                            <input type="text" class="form-control" [(ngModel)]="movie.youTubeId" name= "youTubeId" id="inputEditYouTubeId" value="{{movie.youTubeId}}" required>
-                        </div>
-                        
-                        <div class="form-group">
-                            <button (click)="changeMovie(movie.title, movie.youTubeId, movie.description, movie.id)" class="btn btn-primary">Submit</button>
-                            <button id="closeButton2" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        </div>
-                        
-                    </form>
-                </div>
-            </div>
-            
-        </div>
-    </div> -->
-    <!-- End of change Airplane Modal -->
-    
